--- a/Indonesian Poverty.ipynb
+++ b/Indonesian Poverty.ipynb
@@ -1,6 +1,19 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "c73a56cb-c95a-4b7a-afeb-e6631c8ea297",
+   "metadata": {},
+   "source": [
+    "# Import Library\r\n",
+    "\r\n",
+    "Tahap ini melakukan import library yang dibutuhkan untuk:\r\n",
+    "1. **Manipulasi Data**: `pandas`, `numpy`\r\n",
+    "2. **Visualisasi Data**: `seaborn`, `matplotlib`\r\n",
+    "3. **Pemrosesan & Pemodelan**: `skleaitma Clustering, PCA, Random Forest, dan metrik evaluasi)."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 188,
    "id": "2e005381-3cb7-4716-acf8-67ce42c01b25",
@@ -19,6 +32,16 @@
     "from sklearn.decomposition import PCA\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.ensemble import RandomForestRegressor"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "46b5e6ce-5c0c-48cc-949f-92a43eef38a6",
+   "metadata": {},
+   "source": [
+    "# Memuat Dataset\r\n",
+    "\r\n",
+    "Membaca dataset dari file Excel (`Data Kabupaten Kota.xlsx`) dan menyimpannya ke dalam DataFrame `df`."
    ]
   },
   {
@@ -994,6 +1017,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "20dfcb9b-34bd-46e5-88b9-8939e3ee8fde",
+   "metadata": {},
+   "source": [
+    "# Data Cleaning (Pembersihan Data)\r\n",
+    "\r\n",
+    "Menangani nilai-nilai yang hilang (*missing values*) yang terdeteksi pada tahap pemeriksaan informasi data sebelumnya."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "id": "49c0981c-202d-47dd-bf7c-14814722c2a9",
@@ -1952,6 +1985,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "a1fbcfc9-c4d6-416d-9d49-92fca9ffed9b",
+   "metadata": {},
+   "source": [
+    "# Exploratory Data Analysis (EDA)\n",
+    "Menganalisis data antara variabel sebelum dilakukan analisis lanjutan"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 73,
    "id": "fd343b43-a331-4e14-bfba-a15bdb7c9ddb",
@@ -2163,6 +2205,15 @@
     "kondisi = (df['tidak bekerja'] >= 70) & (df['persentase penduduk miskin'] <= 10)\n",
     "df_terpilih = df[kondisi]\n",
     "df_terpilih[['kabupaten/kota', 'provinsi', 'tidak bekerja', 'persentase penduduk miskin', 'bekerja di sektor pertanian', 'bekerja bukan di sektor pertanian']]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c31cd386-3359-47fd-9aa5-36f67a63d40e",
+   "metadata": {},
+   "source": [
+    "# Uji Multikolinieritas \n",
+    "Dilakukan uji ini untuk mengecek antar variabel yang hubungannya tinggi"
    ]
   },
   {
@@ -3042,6 +3093,16 @@
     "# Menghapus kolom yang tidak penting \n",
     "df_for_multikol.drop(columns=['pkp untuk makanan miskin dan tidak miskin'], inplace=True)\n",
     "df_for_multikol"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1643713a-7f34-48d2-bb9e-d826c073347d",
+   "metadata": {},
+   "source": [
+    "# Data Preprocessing\r\n",
+    "\r\n",
+    "Melakukan standarisasi fitur menggunakan `StandardScaler` agar skala data seragam, dan/atau mereduksi dimensi data menggunakan `PCA` (Principal Component Analysian."
    ]
   },
   {
@@ -4030,6 +4091,15 @@
    "source": [
     "variance_captured = pca.explained_variance_ratio_[0] * 100\n",
     "print(f\"Indeks baru ini mewakili {variance_captured:.2f}% informasi dari 3 variabel asli.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bdab193f-9785-48a8-b392-8f9894c315b3",
+   "metadata": {},
+   "source": [
+    "# Analisis Klaster \n",
+    "Menganalisis kemiskinan dan membagi klaster Kabupaten/Kota yang memiliki kemiripan karakteristik. "
    ]
   },
   {
@@ -7732,6 +7802,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "d44b0245-743b-4483-9e01-74a9f70b96d6",
+   "metadata": {},
+   "source": [
+    "# Modelling \n",
+    "Membangun model machine learning untuk memprediksi variabel target. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 290,
    "id": "10612801-f4d9-4e37-b249-8cc3c46cde8f",
@@ -9389,12 +9468,21 @@
    ],
    "source": [
     "kategori_cluster = {\n",
-    "    0 : 'Kota Tertinggal',\n",
-    "    1 : 'Kota Maju',\n",
-    "    2 : 'Kota Berkembang'\n",
+    "    0 : 'Kabupaten/Kota Tertinggal',\n",
+    "    1 : 'Kabupaten/Kota Maju',\n",
+    "    2 : 'Kabupaten/Kota Berkembang'\n",
     "}\n",
     "df['kategori klaster'] = df['clusters'].map(kategori_cluster)\n",
     "df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "51695e95-6cd3-4dc1-95d6-61815448d98a",
+   "metadata": {},
+   "source": [
+    "# Save File\n",
+    "Menyimpan File terbaru untuk dilakukan visualisasi lanjutan menggunakan Tableau."
    ]
   },
   {
